# tigo_python

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  test_client.py
tigo_python/: __init__.py  auth.py  client.py  config.py  exceptions.py
